--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,4 +1,4 @@
-name: Publish docs via GitHub Pages
+name: Publish via GitHub Pages
 on:
   push:
     branches:
@@ -6,16 +6,14 @@ on:
 
 jobs:
   build:
-    name: Deploy docs
+    name: Deploy
     runs-on: ubuntu-latest
     steps:
       - name: Checkout main
         uses: actions/checkout@v2
 
-      - name: Deploy docs
+      - name: Deploy
         uses: mhausenblas/mkdocs-deploy-gh-pages@master
-        # Or use mhausenblas/mkdocs-deploy-gh-pages@nomaterial to build without the mkdocs-material theme
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           CONFIG_FILE: /mkdocs.yml
-          # GITHUB_DOMAIN: github.myenterprise.com
